@@ -19,16 +19,15 @@ public:
                const char *wordBreakStr = "{\\wbr}");
   virtual ~FilterLatex ();
 
-  void Print (char* token, bool thaiFlag);
   bool GetNextToken (char* token, bool* thaiFlag);
+  void Print (char* token, bool thaiFlag);
 
-protected:
-  bool winCharSet;  // true for Windows char set; false for Mac char set
-  int latexFlag;    // 0 do nothing; 1 win char set; 2 mac char set
-
+private:
   void AdjustText (unsigned char* input, unsigned char* output);
 
 private:
+  bool winCharSet;  // true for Windows char set; false for Mac char set
+  int latexFlag;    // 0 do nothing; 1 win char set; 2 mac char set
   char buffer[2000];
   bool verbatim;
 };
